--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,6 +7,7 @@
   <div class="card">
   
   <div class="card-body">
+    <!--
     <h4 class="card-title">Login</h4>
     <form   #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate >
 						   								
@@ -20,10 +21,49 @@
 								<input type="password" class="form-control input-lg" id="content-tab-pass" placeholder="Enter Password" name="password" required [(ngModel)]="model.password">
 							  </div>
 							  <button  class="form_submit" type="submit">Log In</button>
-							</form>
+							</form>-->
     
+
+              <mat-tab-group>
+  <mat-tab label="Login"  class="content-tab">
+    <form #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate>
+						   
+								
+							 <div class="center login-message">{{error_message}}</div>
+							  <div class="form-group">
+								
+								<input type="text" class="form-control input-lg" id="content-tab-username" placeholder="Enter Username"  name="username" required [(ngModel)]="model.username">
+							  </div>
+							  <div class="form-group">
+							  							
+								<input type="password" class="form-control input-lg" id="content-tab-pass" placeholder="Enter Password" name="password" required [(ngModel)]="model.password">
+							  </div>
+							  <button  class="form_submit" type="submit">Log In</button>
+              </form>
+            </mat-tab>
+  <mat-tab label="Sign Up">
+    <form #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate> 
+							
+							
+							  <div class="form-group">
+							  <input type="text" class="form-control input-lg" id="content-tab-name" placeholder="Enter Username" name="username" required [(ngModel)]="model.username">
+							  </div>
+							  <div class="form-group">
+								
+							  							
+								<input type="password" class="form-control input-lg" id="content-tab-pass" placeholder="Enter Password" name="password" required [(ngModel)]="model.password">
+							  </div>
+							  <button  class="form_submit" type="submit">Sign Up</button>
+							</form>
+  </mat-tab>
+</mat-tab-group>
   </div>
 </div>
+
+
+
+
+
 </div>
 <div class="col">
       </div>
