--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
 
               <mat-tab-group>
   <mat-tab label="Login"  class="content-tab">
-    <form #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate>
+    <form #form="ngForm" (ngSubmit)="submitLogin(form.value)" ngNativeValidate>
 						   
 								
 							 <div class="center login-message">{{error_message}}</div>
@@ -42,7 +42,7 @@
               </form>
             </mat-tab>
   <mat-tab label="Sign Up">
-    <form #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate> 
+    <form #form="ngForm" (ngSubmit)="submitRegister(form.value)" ngNativeValidate> 
 							
 							
 							  <div class="form-group">
