--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,9 +7,9 @@
   <div class="card">
   
   <div class="card-body">
-    <!--
+    
     <h4 class="card-title">Login</h4>
-    <form   #form="ngForm" (ngSubmit)="submitContact(form.value)" ngNativeValidate >
+    <form   #form="ngForm" (ngSubmit)="submitLogin(form.value)" ngNativeValidate >
 						   								
 							 <div class="center login-message">{{error_message}}</div>
 							  <div class="form-group">
@@ -21,9 +21,9 @@
 								<input type="password" class="form-control input-lg" id="content-tab-pass" placeholder="Enter Password" name="password" required [(ngModel)]="model.password">
 							  </div>
 							  <button  class="form_submit" type="submit">Log In</button>
-							</form>-->
+							</form>
     
-
+<!--
               <mat-tab-group>
   <mat-tab label="Login"  class="content-tab">
     <form #form="ngForm" (ngSubmit)="submitLogin(form.value)" ngNativeValidate>
@@ -57,6 +57,7 @@
 							</form>
   </mat-tab>
 </mat-tab-group>
+-->
   </div>
 </div>
 
