--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,7 @@
   
   <div class="card-body">
     <div class="center">
-    <h4 class="card-title">Welcome {{token.username}}</h4>
-    
+    <h4 class="card-title">Welcome</h4>
     
     <a class="page_submit" (click)="logout()">Logout</a>
     </div>
